cmake_minimum_required(VERSION 3.18)
project(SWExpert)

set(CMAKE_CXX_STANDARD 17)

add_executable(sample sample.cpp)
add_executable(1859 1859.cpp)
add_executable(15623 15623.cpp)
add_executable(15874 15874.cpp)
add_executable(13240 13240.cpp)
add_executable(14695 14695.cpp)
add_executable(14560 14560.cpp)
add_executable(15766 15766.cpp)
add_executable(showme_test_c showme_test_c.cpp)
